--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://tienda-ropa:<db_password>@cluster1.x8b56iu.mongodb.net/?appName=Cluster1
+MONGODB_URI=mongodb+srv://<admin>:<admin123>@cluster1.x8b56iu.mongodb.net/
 JWT_SECRET=ropa_tienda_secreta_2026
 
