--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://admin:<admin>@cluster1.x8b56iu.mongodb.net/?appName=Cluster1
+MONGODB_URI=mongodb+srv://nuevo:<nuevo>@cluster1.x8b56iu.mongodb.net/?appName=Cluster1
 JWT_SECRET=ropa_tienda_secreta_2026
 
